logs/Slang/generated/keywords/5.6.2--keyword_modport.sv.log
name: keyword_modport
description: The 'modport' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_modport.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_modport.sv:8:8: error: expected declarator
    bit modport;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_modport.sv:8:16: error: expected identifier
    bit modport;
               ^
